# oshw_nfc_reader

./: .gitmodules  README.md
firmware/: CMakeLists.txt  README.md  win_launch.cmd
firmware/board/: at32f415_board.c  at32f415_board.h  at32f415_clock.c  at32f415_clock.h  at32f415_conf.h  at32f415_int.c
firmware/include/: FreeRTOSConfig.h  bsp.h  usb_conf.h
firmware/source/: delay.c  main.c  usbd_ccid.c
firmware/source/ccid/: ccid_class.c  ccid_class.h  ccid_cmd.c  ccid_cmd.h  ccid_desc.c  ccid_desc.h  ccid_interface.c  ccid_interface.h
firmware/source/pn532/: nfc-types.h  pn53x-internal.h  pn53x.c  pn53x.h  pn53x_bus.h  pn53x_error.h  pn53x_spi.c
